kubernetes/applications/infra/grafana/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: private
      namespace: infra-tailscale # Explicitly points across namespaces to your Tailscale Gateway
    - name: internal
      namespace: infra-gateway
  hostnames:
    - 'grafana.internal.${CLUSTER_DOMAIN}'
    - 'grafana.private.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
          weight: 100
